14/04/14 Julien Dutheil
* Added --seed argument to BppApplication to set random seed.

04/03/13 -*- Version 2.1.0 -*-

06/02/13 Julien Dutheil
* Fixed bug #60
* Fixed bug #63

18/01/13 Julien Dutheil
* Now compiles with -Wconversion
* Several code formating update

09/01/13 Julien Dutheil
* Bug 59 fixed.

09/02/12 -*- Version 2.0.3 -*-

24/01/12 Julien Dutheil and Ania Pawelczyk
* Added Linear Assignment Problem function in MatrixTools.

24/11/11 Julien Dutheil
* NestedStringTokenizer now inherits from StringTokenizer.

22/11/11 Julien Dutheil
* Added unit testing for matrices
* Added new Range and MultiRange classes + unit test.

09/06/11 -*- Version 2.0.2 -*-

22/03/11 Mathieu Groussin
* Added classes for mutivariate analysis.

18/03/11 Mathieu Groussin
* Added Hadamard product function in MatrixTools.

28/02/11 -*- Version 2.0.1 -*-

25/02/11 Julien Dutheil
* Fixed CMakeLists.txt: added RColorSet.cpp file to compilation chain!

07/02/11 -*- Version 2.0.0 -*-

09/11/10 Julien Dutheil
* Added chisq test on contingency table.
* Removed NumTools::pow which was incorrect. Use std::pow instead.

05/11/10 Julien Dutheil
* In VectorTools: posmin -> whichMin, whichmax -> whichMax. Also recoded a bit more efficiently.

27/10/10 Julien Dutheil
* Added unit testing
* [0000003] Fixed downhill simplex method! Did not work when initial point was 0!

17/09/10 Julien Dutheil
* Initial draft of bpp-core from old bpp-utils and bpp-numcalc.
