@@ -48,20 +48,18 @@ knowledge of the CeCILL license and that you accept its terms.
 using namespace bpp;
 using namespace std;
 
-int BppApplication::warningLevel_ = 3;
-
 BppApplication::BppApplication(int argc, char* argv[], const std::string& name): appName_(name), params_(), timerStarted_(false)
 {
   cout << "Parsing options:" << endl;  
   params_ = AttributesTools::parseOptions(argc, argv);
-  bool noint = ApplicationTools::getBooleanParameter("--noninteractive", params_, false, "", true, false);
+  ApplicationTools::warningLevel = ApplicationTools::getIntParameter("--warning", params_, 0, "", true, 3);
+  bool noint = ApplicationTools::getBooleanParameter("--noninteractive", params_, false, "", true, 3);
   ApplicationTools::interactive = !noint;
-  long seed = ApplicationTools::getParameter<long>("--seed", params_, -1, "", true, false);
+  long seed = ApplicationTools::getParameter<long>("--seed", params_, -1, "", true, 3);
   if (seed >= 0) {
     RandomTools::setSeed(seed);
     ApplicationTools::displayResult("Random seed set to", seed);
   }
-  warningLevel_ = ApplicationTools::getIntParameter("--warning", params_, 3, "", true, false);
 }
 
 void BppApplication::startTimer()
