@@ -55,7 +55,6 @@ namespace bpp
       std::string appName_;
       mutable std::map<std::string, std::string> params_;
       bool timerStarted_;
-      static int warningLevel_;
 
     public:
       BppApplication(int argc, char* argv[], const std::string& name);
@@ -74,7 +73,6 @@ namespace bpp
       
       std::string& getParam(const std::string& name) { return params_[name]; }
 
-      static bool warn(int level) { return level <= warningLevel_; }
   };
 
 } //end of namespace bpp;
